; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_send_read.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_send_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar934x_nfc = type { i32, i32, i64 }

@.str = private unnamed_addr constant [32 x i8] c"read, column=%d page=%d len=%d\0A\00", align 1
@AR934X_NFC_CMD_CMD0_M = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_CMD0_S = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_SEQ_18 = common dso_local global i32 0, align 4
@NAND_CMD_READSTART = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_CMD1_S = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_SEQ_1C5A1CXR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"[data] \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ar934x_nfc*, i32, i32, i32, i32)* @ar934x_nfc_send_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar934x_nfc_send_read(%struct.ar934x_nfc* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.ar934x_nfc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.ar934x_nfc* %0, %struct.ar934x_nfc** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %6, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = call i32 @nfc_dbg(%struct.ar934x_nfc* %13, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @AR934X_NFC_CMD_CMD0_M, align 4
  %20 = and i32 %18, %19
  %21 = load i32, i32* @AR934X_NFC_CMD_CMD0_S, align 4
  %22 = shl i32 %20, %21
  store i32 %22, i32* %11, align 4
  %23 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %6, align 8
  %24 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %23, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %5
  %28 = load i32, i32* @AR934X_NFC_CMD_SEQ_18, align 4
  %29 = load i32, i32* %11, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %11, align 4
  br label %40

31:                                               ; preds = %5
  %32 = load i32, i32* @NAND_CMD_READSTART, align 4
  %33 = load i32, i32* @AR934X_NFC_CMD_CMD1_S, align 4
  %34 = shl i32 %32, %33
  %35 = load i32, i32* %11, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %11, align 4
  %37 = load i32, i32* @AR934X_NFC_CMD_SEQ_1C5A1CXR, align 4
  %38 = load i32, i32* %11, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %11, align 4
  br label %40

40:                                               ; preds = %31, %27
  %41 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %6, align 8
  %42 = load i32, i32* %8, align 4
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* %11, align 4
  %46 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %6, align 8
  %47 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @ar934x_nfc_do_rw_command(%struct.ar934x_nfc* %41, i32 %42, i32 %43, i32 %44, i32 %45, i32 %48, i32 0)
  store i32 %49, i32* %12, align 4
  %50 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %6, align 8
  %51 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = load i32, i32* %10, align 4
  %54 = call i32 @nfc_debug_data(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %52, i32 %53)
  %55 = load i32, i32* %12, align 4
  ret i32 %55
}

declare dso_local i32 @nfc_dbg(%struct.ar934x_nfc*, i8*, i32, i32, i32) #1

declare dso_local i32 @ar934x_nfc_do_rw_command(%struct.ar934x_nfc*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @nfc_debug_data(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
